syntax="proto3";

package pb;

option go_package = "./pkg/pb";

service MethodService{
    rpc Method (MethodRequest) returns (MethodResponse){}
}

message MethodRequest{
    int32 Method = 1;
    int32 WaitTime = 2;
}

message MethodUsers {
    string first_name = 1;
}

message MethodResponse {
    int32 status =1;
    string response =2;
    string error =3;
    int32 count = 4;
    repeated MethodUsers users = 5;
}
